2002-12-04  Chris Demetriou  <cgd@broadcom.com>

	* config/mips/mips.md (get_fnaddr): Avoid placing an "la"
	macro instruction in a branch delay slot, to avoid assembler
	warnings.

2002-12-04  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR c/7622
	* c-semantics (genrtl_scope_stmt): Do not output inlined
	nested functions that contain no code.

Wed Dec  4 15:20:54 CET 2002  Jan Hubicka  <jh@suse.cz>

	* cfgrtl.c (force_nonfallthru_and_redirect):  Allow abnormal edge
	to be forced into nonfallthru.

2002-12-03  Jason Thorpe  <thorpej@wasabisystems.com>

	* config/t-netbsd (USER_H): Set to $(EXTRA_HEADERS).

2002-12-03  Aldy Hernandez  <aldyh@redhat.com>

        * config/rs6000/spe.md (*movv1di_const0): New pattern.

2002-12-03  Richard Henderson  <rth@redhat.com>

	* libgcc-std.ver: Inherit GCC_3.3 from GCC_3.0.

2002-12-03  Hans-Peter Nilsson  <hp@bitrange.com>

	* bitmap.c (bitmap_ior_and_compl, bitmap_union_of_diff):
	Initialize tmp.using_obstack to 0.

2002-12-03  Andreas Schwab  <schwab@suse.de>

	* config/m68k/m68k.h (EH_RETURN_DATA_REGNO): Define.
	(EH_RETURN_STACKADJ_RTX): Define.
	(EH_RETURN_HANDLER_RTX): Define.
	(ASM_PREFERRED_EH_DATA_FORMAT): Define.
	* config/m68k/m68k.c (m68k_save_reg): New function.  Handle eh
	registers and don't save fixed registers.
	(m68k_output_function_prologue): Use it.
	(use_return_insn): Likewise.
	(m68k_output_function_epilogue): Likewise.

2002-12-03  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.c (single_one_operand): Fix a warning.
	(single_zero_operand): Likewise.

2002-12-02  Kazu Hirata  <kazu@cs.umass.edu>

	* config/h8300/h8300.c (dosize): Replace argument op with
	sign.
	(h8300_output_function_prologue): Update the call to dosize.
	(h8300_output_function_epilogue): Likewise.

2002-12-02  Bob Wilson  <bob.wilson@acm.org>

	* config/xtensa/xtensa.h: Delete ifndefs with nothing inside them.

2002-12-02  Craig Rodrigues  <rodrigc@gcc.gnu.org>

	* configure.in: Use "missing" script to generate warning if